--- a/src/component/Main/main.css
+++ b/src/component/Main/main.css
@@ -73,9 +73,9 @@
 .Main-ground{
     position: absolute;
     bottom: 0;
-    width: 100%;
+
     > img {
-        width: 100%;
+       height: 194px;
     }   
 }
 
