--- a/src/component/Main/main.css
+++ b/src/component/Main/main.css
@@ -1,96 +1,93 @@
 .Main {
-    position: relative;
-    height: 46.25rem;
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    background: var(--Background_Yellow, #FCF5E6);
+  position: relative;
+  height: 46.25rem;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  background: var(--Background_Yellow, #fcf5e6);
+  overflow: hidden;
 }
 
 .Main-contents {
-    display: flex;
-    position: relative;
-    z-index: 1;
-    width: 1126px;
-    height:496px;
+  display: flex;
+  position: relative;
+  z-index: 1;
+  width: 1024px;
+  height: 496px;
 }
 
 .Main-desc {
-    color: var(--Primary-color, #443018);
-    font-family: Omyu;
-    font-size: 50px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    position:absolute;
-    top:74px;
-    left: 0;
-    width: max-content;
+  color: var(--Primary-color, #443018);
+  font-family: Omyu;
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  position: absolute;
+  top: 74px;
+  left: 0;
+  width: max-content;
 }
 
 .Main-buttons {
-    position:absolute;
-    top: 168px;
-    left: 3px;
-    width: 502px;
-    height: 67px;
+  position: absolute;
+  top: 168px;
+  left: 3px;
+  width: 502px;
+  height: 67px;
 }
 
 .Main-googleBtn {
-    all: unset;
-    position: absolute;
-    top: 0;
-    left: 0px;
-    width: 235px;
-    height: 67px;
-    > img {
-        width: 100%;
-    }
+  all: unset;
+  position: absolute;
+  top: 0;
+  left: 0px;
+  width: 235px;
+  height: 67px;
+  > img {
+    width: 100%;
+  }
 }
 
 .Main-appleBtn {
-    all: unset;
-    position: absolute;
-    top: 0;
-    right: 0px;
-    width: 235px;
-    height: 67px;
-    > img {
-        width: 100%;
-    }
+  all: unset;
+  position: absolute;
+  top: 0;
+  right: 0px;
+  width: 235px;
+  height: 67px;
+  > img {
+    width: 100%;
+  }
 }
 
 .Main-twotoo {
-    width: 239.957px;
-    height: 40px;
-    flex-shrink: 0;
-    position:absolute;
-    top: 0;
-    left: 0;
+  width: 239.957px;
+  height: 40px;
+  flex-shrink: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
-.Main-ground{
-    position: absolute;
-    bottom: 0;
-
-    > img {
-       height: 194px;
-    }   
+.Main-ground {
+  position: absolute;
+  bottom: 0;
+  height: 201px;
 }
 
 .Main-flowers {
-    position: absolute;
-    right: 0;
-    bottom:0;
-    width: 565px;
-    height: 307px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 565px;
+  height: 307px;
 }
 
 .Main-bee {
-    position: absolute;
-    right: 34px;
-    top:0;
-    width: 182px;
-    height: 153px;
+  position: absolute;
+  right: 34px;
+  top: 0;
+  width: 182px;
+  height: 153px;
 }
