--- a/src/component/StepThree/stepThree.css
+++ b/src/component/StepThree/stepThree.css
@@ -1,64 +1,73 @@
 .StepThree {
-    height: 1024px;
-    background: var(--Background_Yellow, #FCF5E6);
-    justify-content: center;
-    display: grid;
-    position: relative;
-    overflow: hidden;
+  height: 1024px;
+  background: var(--Background_Yellow, #fcf5e6);
+  justify-content: center;
+  display: grid;
+  position: relative;
+  overflow: hidden;
+  > div {
+    background-color: #ffe6af;
+    width: 1440px;
+    border-radius: 0 0 50px 50px;
+  }
 }
 
 .StepThree-Text {
-    height: 185px;
-    margin-top: 167px;
-    width: 1092px;
-    text-align: left;
+  height: 185px;
+  margin-top: 167px;
+  width: 1024px;
+  text-align: left;
+  margin-right: 208px;
+  margin-left: 208px;
 }
 
 .StepThree-Step1 {
-    color: var(--Main_Coral, #F07C4B);
-    font-family: Omyu;
-    font-size: 50px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    margin-bottom: 28px;
+  color: var(--Main_Coral, #f07c4b);
+  font-family: Omyu;
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 28px;
 }
 
 .StepThree-Title {
-    color: #000;
-    font-family: Omyu;
-    font-size: 50px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+  color: #000;
+  font-family: Omyu;
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .StepThree-Desc {
-    color: var(--gray-500, #A09E9C);
-    font-family: Omyu;
-    font-size: 30px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 46px; /* 153.333% */
-    margin-left: 7px;
+  color: var(--gray-500, #a09e9c);
+  font-family: Omyu;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 46px; /* 153.333% */
+  margin-left: 7px;
 }
 
 .StepThree-Button {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 64px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 64px;
 }
 
 .Stepthree-Card {
-    height: 510px;
-    position: absolute;
-    top: 0px;
-    right: 36px;
+  height: 510px;
+  position: absolute;
+  top: 0px;
+  right: 36px;
 }
 
 .StepThree-Pictures {
-    width: 1092px;
-    height: 510px;
-    position: relative;
+  width: 1024px;
+  height: 510px;
+  position: relative;
+  margin-right: 208px;
+  margin-left: 208px;
 }
