--- a/src/component/StepTwo/stepTwo.css
+++ b/src/component/StepTwo/stepTwo.css
@@ -1,57 +1,58 @@
 .StepTwo {
-    height: 1024px;
-    background: var(--Background_Yellow, #FCF5E6);
-    justify-content: center;
-    display: flex;
-    position: relative;
-    overflow: hidden;
+  height: 1024px;
+  background: var(--Background_Yellow, #fcf5e6);
+  justify-content: center;
+  display: flex;
+  position: relative;
+  overflow: hidden;
 }
 
 .StepTwo-Text {
-    height: 185px;
-    margin-top: 167px;
-    width: 1092px;
-    text-align: left;
+  height: 185px;
+  margin-top: 167px;
+  width: 1024px;
+  text-align: left;
 }
 
 .StepTwo-Step1 {
-    color: var(--Main_Coral, #F07C4B);
-    font-family: Omyu;
-    font-size: 50px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    margin-bottom: 28px;
+  color: var(--Main_Coral, #f07c4b);
+  font-family: Omyu;
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 28px;
 }
 
 .StepTwo-Title {
-    color: #000;
-    font-family: Omyu;
-    font-size: 50px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+  color: #000;
+  font-family: Omyu;
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .StepTwo-Desc {
-    color: var(--gray-500, #A09E9C);
-    font-family: Omyu;
-    font-size: 30px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 46px; /* 153.333% */
-    margin-left: 7px;
+  color: var(--gray-500, #a09e9c);
+  font-family: Omyu;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 46px; /* 153.333% */
+  margin-left: 7px;
 }
 
 .StepTwo-Picture {
-    position: absolute;
-    bottom: 249px;
-    height: 346px;
-    z-index: 1;
+  position: absolute;
+  bottom: 249px;
+  height: 346px;
+  z-index: 1;
 }
 
 .StepTwo-Ground {
-    position: absolute;
-    bottom: 0px;
-    height: 324px;
+  position: absolute;
+  bottom: 0px;
+  height: 324px;
+  width: 1440px;
 }
