feat: 클릭 마우스 추가, 사이트 제목 favicon추가

--- a/src/component/Footer/footer.css
+++ b/src/component/Footer/footer.css
@@ -4,6 +4,7 @@
 .Footer_Instargram {
   margin-top: 60px;
   height: 66px;
+  cursor: pointer;
 }
 .Footer_Link {
   color: var(--gray-600, #898784);
