--- a/src/component/Main/main.css
+++ b/src/component/Main/main.css
@@ -45,6 +45,7 @@
   width: 235px;
   height: 67px;
   > img {
+    cursor: pointer;
     width: 100%;
   }
 }
@@ -57,6 +58,7 @@
   width: 235px;
   height: 67px;
   > img {
+    cursor: pointer;
     width: 100%;
   }
 }
