--- a/src/component/Main/main.css
+++ b/src/component/Main/main.css
@@ -14,6 +14,10 @@
   z-index: 1;
   width: 1024px;
   height: 496px;
+
+  @media (max-width: 1024px) {
+    width: 326px;
+  }
 }
 
 .Main-desc {
@@ -27,6 +31,13 @@
   top: 74px;
   left: 0;
   width: max-content;
+
+  @media (max-width: 1024px) {
+    width: 325.803px;
+    height: 29.988px;
+    font-size: 32px;
+    top: 45px;
+  }
 }
 
 .Main-buttons {
@@ -35,6 +46,12 @@
   left: 3px;
   width: 502px;
   height: 67px;
+
+  @media (max-width: 1024px) {
+    width: 325.37px;
+    height: 40.584px;
+    top: 113px;
+  }
 }
 
 .Main-googleBtn {
@@ -47,6 +64,11 @@
   > img {
     cursor: pointer;
     width: 100%;
+  }
+
+  @media (max-width: 1024px) {
+    width: 152.619px;
+    height: 39.985px;
   }
 }
 
@@ -61,6 +83,11 @@
     cursor: pointer;
     width: 100%;
   }
+
+  @media (max-width: 1024px) {
+    width: 152.619px;
+    height: 39.985px;
+  }
 }
 
 .Main-twotoo {
@@ -70,6 +97,11 @@
   position: absolute;
   top: 0;
   left: 0;
+
+  @media (max-width: 1024px) {
+    width: 155.838px;
+    height: 23.991px;
+  }
 }
 
 .Main-ground {
@@ -84,6 +116,11 @@
   bottom: 0;
   width: 565px;
   height: 307px;
+
+  @media (max-width: 1024px) {
+    width: 367px;
+    height: 184.129px;
+  }
 }
 
 .Main-bee {
@@ -92,4 +129,11 @@
   top: 0;
   width: 182px;
   height: 153px;
+
+  @media (max-width: 1024px) {
+    width: 118.219px;
+    height: 91.765px;
+    left: 131px;
+    top: 223px;
+  }
 }
