--- a/src/component/StepOne/stepOne.css
+++ b/src/component/StepOne/stepOne.css
@@ -12,6 +12,10 @@
   margin-top: 167px;
   width: 1092px;
   text-align: left;
+
+  @media (max-width: 1024px) {
+    width: 430px;
+  }
 }
 
 .StepOne-Step1 {
@@ -22,6 +26,9 @@
   font-weight: 400;
   line-height: normal;
   margin-bottom: 28px;
+  @media (max-width: 1024px) {
+    font-size: 36px;
+  }
 }
 
 .StepOne-Title {
@@ -31,6 +38,9 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  @media (max-width: 1024px) {
+    font-size: 36px;
+  }
 }
 
 .StepOne-Desc {
@@ -41,6 +51,10 @@
   font-weight: 400;
   line-height: 46px; /* 153.333% */
   margin-left: 7px;
+
+  @media (max-width: 1024px) {
+    font-size: 36px;
+  }
 }
 
 .StepOne-Flower {
@@ -48,6 +62,10 @@
   position: absolute;
   bottom: 270px;
   z-index: 1;
+
+  @media (max-width: 1024px) {
+    height: 264px;
+  }
 }
 
 .StepOne-ImageContainer {
@@ -62,6 +80,10 @@
   height: 213px;
   animation: scroll 20s linear infinite;
   overflow: hidden;
+
+  @media (max-width: 1024px) {
+    display: none;
+  }
 }
 
 .StepOne-Choice-img_dup {
@@ -70,6 +92,37 @@
   height: 213px;
   animation: scroll4 20s linear infinite;
   overflow: hidden;
+  @media (max-width: 1024px) {
+    display: none;
+  }
+}
+
+.StepOne-mobile-img {
+  position: absolute;
+  display: none;
+  width: 1176px;
+  height: 304px;
+  bottom: 79px;
+  animation: scroll5 20s linear infinite;
+  overflow: hidden;
+
+  @media (max-width: 1024px) {
+    display: block;
+  }
+}
+
+.StepOne-mobile-img_dup {
+  position: absolute;
+  display: none;
+  width: 1176px;
+  height: 304px;
+  bottom: 79px;
+  animation: scroll6 20s linear infinite;
+  overflow: hidden;
+
+  @media (max-width: 1024px) {
+    display: block;
+  }
 }
 
 @keyframes scroll {
@@ -87,5 +140,22 @@
   }
   100% {
     transform: translateX(1523px);
+  }
+}
+@keyframes scroll5 {
+  0% {
+    transform: translateX(0px);
+  }
+  100% {
+    transform: translateX(-1024px);
+  }
+}
+
+@keyframes scroll6 {
+  0% {
+    transform: translateX(1196px);
+  }
+  100% {
+    transform: translateX(172px);
   }
 }
