--- a/src/component/Review/review.css
+++ b/src/component/Review/review.css
@@ -3,6 +3,9 @@
   position: relative;
   overflow: hidden;
   background: var(--secondary-01, #ffe6af);
+  @media (max-width: 600px) {
+    height: 500px;
+  }
 }
 
 .Review_Title {
@@ -17,6 +20,10 @@
 
   @media (max-width: 1024px) {
     font-size: 36px;
+  }
+  @media (max-width: 600px) {
+    padding-top: 80px;
+    font-size: 24px;
   }
 }
 
