--- a/src/component/StepFour/stepFour.css
+++ b/src/component/StepFour/stepFour.css
@@ -5,6 +5,10 @@
   display: grid;
   position: relative;
   overflow: hidden;
+
+  @media (max-width: 600px) {
+    height: 800px;
+  }
 }
 
 .StepFour-Text {
@@ -17,6 +21,11 @@
   @media (max-width: 1024px) {
     width: 579px;
     height: 636px;
+  }
+
+  @media (max-width: 600px) {
+    width: 327px;
+    margin-top: 80px;
   }
 }
 
@@ -31,6 +40,10 @@
 
   @media (max-width: 1024px) {
     font-size: 36px;
+  }
+
+  @media (max-width: 600px) {
+    font-size: 24px;
   }
 }
 
@@ -59,6 +72,10 @@
   @media (max-width: 1024px) {
     display: block;
   }
+
+  @media (max-width: 600px) {
+    font-size: 24px;
+  }
 }
 
 .StepFour-Desc {
@@ -69,6 +86,10 @@
   font-weight: 400;
   line-height: 46px; /* 153.333% */
   margin-left: 7px;
+
+  @media (max-width: 600px) {
+    font-size: 18px;
+  }
 }
 
 .StepFour-Card {
@@ -82,6 +103,11 @@
     height: 412px;
     top: unset;
     bottom: 0px;
+  }
+
+  @media (max-width: 600px) {
+    height: 350px;
+    bottom: 110px;
   }
 }
 
