--- a/src/component/StepThree/stepThree.css
+++ b/src/component/StepThree/stepThree.css
@@ -10,6 +10,10 @@
     width: 1440px;
     border-radius: 0 0 50px 50px;
   }
+
+  @media (max-width: 600px) {
+    height: 800px;
+  }
 }
 
 .StepThree-Text {
@@ -22,7 +26,14 @@
 
   @media (max-width: 1024px) {
     width: 582px;
-    margin: 126px auto auto auto;
+    margin: 110px auto auto auto;
+  }
+
+  @media (max-width: 600px) {
+    width: 327px;
+    margin-left: auto;
+    height: 130px;
+    margin-top: 80px;
   }
 }
 
@@ -38,6 +49,10 @@
   @media (max-width: 1024px) {
     font-size: 36px;
   }
+
+  @media (max-width: 600px) {
+    font-size: 24px;
+  }
 }
 
 .StepThree-Title {
@@ -51,6 +66,10 @@
   @media (max-width: 1024px) {
     font-size: 36px;
   }
+
+  @media (max-width: 600px) {
+    font-size: 24px;
+  }
 }
 
 .StepThree-Desc {
@@ -63,7 +82,11 @@
   margin-left: 7px;
 
   @media (max-width: 1024px) {
-    font-size: 36px;
+    font-size: 24px;
+  }
+
+  @media (max-width: 600px) {
+    font-size: 18px;
   }
 }
 
@@ -77,6 +100,10 @@
   @media (max-width: 1024px) {
     font-size: 36px;
     top: 0px;
+  }
+
+  @media (max-width: 600px) {
+    height: 48px;
   }
 }
 
@@ -92,6 +119,11 @@
     bottom: 0px;
     top: unset;
   }
+
+  @media (max-width: 600px) {
+    height: 327px;
+    bottom: 24px;
+  }
 }
 
 .StepThree-Pictures {
@@ -104,5 +136,9 @@
   @media (max-width: 1024px) {
     width: 582px;
     margin: auto;
+  }
+
+  @media (max-width: 600px) {
+    width: 327px;
   }
 }
