fix: 미디어 쿼리 범위 설정

--- a/src/component/Review/review.css
+++ b/src/component/Review/review.css
@@ -9,12 +9,12 @@
 }
 
 .Review_Title {
-  @media (max-width: 1024px) {
-    font-size: 36px;
-  }
   @media (max-width: 600px) {
     padding-top: 80px;
     font-size: 24px;
+  }
+  @media (min-width: 601px) and (max-width: 1024px) {
+    font-size: 36px;
   }
   padding-top: 146px;
   color: var(--Primary-color, #443018);
