--- a/src/component/StepOne/stepOne.css
+++ b/src/component/StepOne/stepOne.css
@@ -14,7 +14,7 @@
   @media (max-width: 600px) {
     margin-top: 110px;
   }
-  @media (max-width: 1024px) {
+  @media (min-width: 601px) and (max-width: 1024px) {
     width: 430px;
   }
   height: 185px;
@@ -29,7 +29,7 @@
     font-size: 24px;
   }
 
-  @media (max-width: 1024px) {
+  @media (min-width: 601px) and (max-width: 1024px) {
     font-size: 36px;
   }
   color: var(--Main_Coral, #f07c4b);
@@ -46,7 +46,7 @@
     font-size: 24px;
   }
 
-  @media (max-width: 1024px) {
+  @media (min-width: 601px) and (max-width: 1024px) {
     font-size: 36px;
   }
   color: #000;
