--- a/src/component/Experience/experience.css
+++ b/src/component/Experience/experience.css
@@ -30,7 +30,7 @@
   @media (max-width: 600px) {
     font-size: 24px;
   }
-  @media (max-width: 1024px) {
+  @media (min-width: 601px) and (max-width: 1024px) {
     font-size: 36px;
     word-break: keep-all;
   }
@@ -47,7 +47,7 @@
   @media (max-width: 600px) {
     font-size: 18px;
   }
-  @media (max-width: 1024px) {
+  @media (min-width: 601px) and (max-width: 1024px) {
     font-size: 20px;
     word-break: keep-all;
   }
