--- a/src/component/Footer/footer.css
+++ b/src/component/Footer/footer.css
@@ -1,13 +1,13 @@
 .Footer {
   @media (max-width: 600px) {
-    height: 500px;
-    text-align: left;
+    height: 500px !important;
+    text-align: left !important;
   }
   height: 298px;
 }
 .Footer_Instargram {
   @media (max-width: 600px) {
-    margin-left: 24px;
+    margin-left: 24px !important;
   }
   margin-top: 60px;
   height: 66px;
@@ -15,9 +15,9 @@
 }
 .Footer_Link {
   @media (max-width: 600px) {
-    display: grid;
-    justify-content: left;
-    margin-left: 24px;
+    display: grid !important;
+    justify-content: left !important;
+    margin-left: 24px !important;
   }
   color: var(--gray-600, #898784);
   font-family: Pretendard;
@@ -32,8 +32,8 @@
 }
 .Footer_Copyright {
   @media (max-width: 600px) {
-    text-align: center;
-    margin-top: 50px;
+    text-align: center !important;
+    margin-top: 50px !important;
   }
   color: var(--gray-400, #d9d8d7);
   font-family: Pretendard;
