--- a/src/component/Review/review.css
+++ b/src/component/Review/review.css
@@ -1,6 +1,6 @@
 .Review {
   @media (max-width: 600px) {
-    height: 500px;
+    height: 500px !important;
   }
   height: 600px;
   position: relative;
@@ -10,11 +10,11 @@
 
 .Review_Title {
   @media (max-width: 600px) {
-    padding-top: 80px;
-    font-size: 24px;
+    padding-top: 80px !important;
+    font-size: 24px !important;
   }
   @media (min-width: 601px) and (max-width: 1024px) {
-    font-size: 36px;
+    font-size: 36px !important;
   }
   padding-top: 146px;
   color: var(--Primary-color, #443018);
