--- a/src/component/StepFour/stepFour.css
+++ b/src/component/StepFour/stepFour.css
@@ -1,6 +1,6 @@
 .StepFour {
   @media (max-width: 600px) {
-    height: 800px;
+    height: 800px !important;
   }
   height: 1024px;
   background: var(--Background_Yellow, #fcf5e6);
@@ -12,12 +12,13 @@
 
 .StepFour-Text {
   @media (max-width: 600px) {
-    width: 327px;
-    margin-top: 80px;
+    width: 327px !important;
+    margin-top: 80px !important;
+    height: 500px !important;
   }
   @media (min-width: 601px) and (max-width: 1024px) {
-    width: 579px;
-    height: 636px;
+    width: 579px !important;
+    height: 636px !important;
   }
 
   height: 235px;
@@ -30,10 +31,10 @@
 
 .StepFour-Step1 {
   @media (max-width: 600px) {
-    font-size: 24px;
+    font-size: 24px !important;
   }
   @media (min-width: 601px) and (max-width: 1024px) {
-    font-size: 36px;
+    font-size: 36px !important;
   }
 
   color: var(--Main_Coral, #f07c4b);
@@ -47,7 +48,7 @@
 
 .StepFour-Title {
   @media (max-width: 1024px) {
-    display: none;
+    display: none !important;
   }
   color: #000;
   font-family: Omyu;
@@ -59,10 +60,11 @@
 
 .StepFour-Title--mobile {
   @media (max-width: 600px) {
-    font-size: 24px;
+    font-size: 24px !important ;
+    display: block !important;
   }
   @media (min-width: 601px) and (max-width: 1024px) {
-    display: block;
+    display: block !important;
   }
   color: #000;
   display: none;
@@ -75,7 +77,7 @@
 
 .StepFour-Desc {
   @media (max-width: 600px) {
-    font-size: 18px;
+    font-size: 18px !important;
   }
   color: var(--gray-500, #a09e9c);
   font-family: Omyu;
@@ -88,13 +90,15 @@
 
 .StepFour-Card {
   @media (max-width: 600px) {
-    height: 350px;
-    bottom: 110px;
+    height: 350px !important;
+    bottom: 110px !important;
+    top: unset !important;
+    bottom: 0 !important;
   }
   @media (min-width: 601px) and (max-width: 1024px) {
-    height: 412px;
-    top: unset;
-    bottom: 0px;
+    height: 412px !important;
+    top: unset !important;
+    bottom: 0px !important;
   }
 
   position: absolute;
